--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Welcome to the Git Class</h1>
+    <h1>This is a buggy code...</h1>
+
+
+
+    <!-- test code -->
+    <h1>this is my test code</h1>
 </body>
 </html>
